--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <!-- Second Image -->
             <div class="Image_container">
                 <div class="image01">
-                    <img src="images/Franchise02.webp" alt="card_one">
+                    <img src="Images/Franchise02.webp" alt="card_one">
                 </div>
                 <div class="Franchise01">
                     <div class="head_pack">
