--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="center">
         <div class="Three_cards">
             <!-- First Image -->
-            <div class="image_container">
+            <div class="Image_container">
                 <div class="image01">
                     <img src="Images/Franchise01.webp" alt="card_one">
                 </div>
